<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.teamapps</groupId>
    <artifactId>demolessons</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.build.timestamp.format>yyyyMMdd-HHmmssSSS</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.teamapps</groupId>
            <artifactId>teamapps-server-jetty-embedded</artifactId>
            <version>0.9.82</version>
        </dependency>
        <dependency>
            <groupId>org.teamapps</groupId>
            <artifactId>universal-db</artifactId>
            <version>0.4.14</version>
        </dependency>
        <dependency>
            <groupId>org.teamapps</groupId>
            <artifactId>teamapps-universal-db-integration</artifactId>
            <version>0.8</version>
        </dependency>
        <dependency>
            <groupId>org.teamapps</groupId>
            <artifactId>teamapps-antu-icon-provider</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.teamapps</groupId>-->
<!--            <artifactId>teamapps-material-design-icon-provider</artifactId>-->
<!--            <version>0.9.7</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.teamapps</groupId>
                <artifactId>universal-db-maven-plugin</artifactId>
                <version>1.2</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate-model</goal>
                        </goals>
                        <configuration>
                            <modelSourceDirectory>${project.basedir}/src/main/model</modelSourceDirectory>
                            <modelClasses>
                                <modelClass>UniversalDbDemoModel</modelClass>
                                <modelClass>IssueTrackerModel</modelClass>
                            </modelClasses>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>